crates/strider/tests/snapshots/v2__arm_be__elf_relocs__dispatch_via_table.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "8" -> "1" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "9" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v10" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v10" [color="#888888", style=dashed];
  "v10" -> "9" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "v11" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v11" [color="#888888", style=dashed];
  "v11" -> "9" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "v12" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v12" [color="#888888", style=dashed];
  "v12" -> "9" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "v13" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v13" [color="#888888", style=dashed];
  "v13" -> "9" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "8" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="init\nr11", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "2" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "14" -> "5" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "14" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "15" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "16" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "16" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "6" -> "17" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "2" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "20" -> "15" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x11010:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "2" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "21" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v22" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v22" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "4" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "21" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "23" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v24" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v24" -> "21" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "6" -> "21" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "25" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v26" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v26" -> "23" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "7" -> "23" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "25" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "27" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v28" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v28" -> "25" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "8" -> "25" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "5" -> "3" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "3" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0xfffffffe:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
